# gwater-installer

./: Cargo.toml  LICENSE  README.md
src/: consts.rs  downloader.rs  lib.rs  main.rs  remover.rs
