[package]
name = "gwater_installer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.18.1"
eframe = "0.18.0"
rfd = "0.9.1"
reqwest = {version = "0.11.11", features = ["json", "blocking"]}
serde_json = "1.0.81"
bytes = "1.1.0"
zip = "0.6.2"